--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/jgteam/bell--file-manager--nodejs#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "express-session": "^1.17.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
     "uuid": "^8.3.1"
